fix(#fls1-115): fix schema drift
